<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DesignActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_video_design"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:src="@drawable/image_video_design" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/image_video_design"
                android:text="@string/video_design"
                android:textSize="20dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="#d8e0e1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_logo_design"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:src="@drawable/image_logo_design" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/image_logo_design"
                android:text="@string/logo_design"
                android:textSize="20dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="#d8e0e1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_architectural_design"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_alignParentRight="true"
                android:layout_margin="-10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/image_architectural_design" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/image_architectural_design"
                android:text="@string/architectural_design"
                android:textSize="20dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="#d8e0e1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_3D_design"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:src="@drawable/image_3d_design" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/image_3D_design"
                android:text="@string/_3D_design"
                android:textSize="20dp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="#d8e0e1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_book_design"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_alignParentRight="true"
                android:layout_margin="-10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/image_book_design" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/image_book_design"
                android:text="@string/book_design"
                android:textSize="20dp" />
        </RelativeLayout>


    </LinearLayout>

</ScrollView>